# snipsel

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.sisyphus/: boulder.json
backend/: pyproject.toml  requirements.txt  test_share.py  test_task_change.py  test_task_done.py
backend/migrations/versions/: 09350dfd8ecc_add_2fa_and_passkeys.py  0e84ff890db1_add_is_favorite_to_collections.py  0f3f3c9c1c1a_add_collection_shares.py  0ff7dff48ccd_add_collection_visits_table.py  28b45004eb13_add_notifications_table.py  2ce60fc4c9df_add_ai_configuration_fields_to_user.py  36af93c9e826_add_reactions_table.py  47d7b2bbc7a5_add_geo_fields_to_snipsels.py  4988a6a8e1fa_add_user_theme_preference.py  55b4a88dc9c3_add_templates.py  577fe0825309_add_header_image_zoom_and_horizontal_.py  642af4f4fe7b_initial.py  6f0594f49a04_add_show_completed_tasks_to_collections.py  8735f6f3794b_add_carry_over_open_tasks_to_users.py  9f2a5b1a2c77_user_scoped_collection_favorites.py  a1b2c3d4e5f6_add_passcode_protection.py  ae59e7ba3829_add_snipsel_reminders.py  (+8 more)
backend/snipsel_api/: app.py  auth_session.py  cli.py  commands.py  config.py  emailer.py  errors.py  extensions.py  models.py  permissions.py  push_service.py  reminders.py  routes_ai.py  routes_attachments.py  routes_auth.py  routes_collections.py  routes_errors.py  routes_importer.py  routes_notifications.py  routes_proxy.py  routes_public.py  routes_reactions.py  routes_search.py  routes_snipsels.py  routes_users.py  utils_text.py
backend/snipsel_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+52 files in other folders)
