[project]
name = "snipsel-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1.0",
  "Flask-Cors>=4.0.1",
  "Flask-Migrate>=4.0.7",
  "Flask-SQLAlchemy>=3.1.1",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.16",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["snipsel_api*"]
